--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "chownr": "^2.0.0",
     "react": "^18.2.0",
     "react-animated-weather": "^4.0.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
+    "semver": "^7.5.4",
     "spinners-react": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
